# faceID

./: .gitignore  CMakeLists.txt  README.md  build_local.sh
cmake/: arm_toolchain.cmake
src/: face_detect.cc  face_embed.cc  face_register.cc  face_register_isf.cpp
